Removed whitespace bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,7 @@ a {
 }
 
 .navlist {
-  list-style: none;
+  /* list-style: none;
   position: absolute;
   top: 12vh;
   right: 0;
@@ -89,7 +89,16 @@ a {
   border: 1px solid pink;
   background: #1f1f1f;
   padding: 2rem;
-  margin: 1rem;
+  margin: 1rem; */
+  list-style: none;
+  display: none;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-evenly;
+  border: 1px solid pink;
+  background: #1f1f1f;
+  padding: 1rem;
+  transition: all 0.5s ease-in-out;
 }
 
 .navlist li {
@@ -119,16 +128,18 @@ a {
 }
 
 .search_field {
-  display: flex;
-  flex-direction: row;
   padding: 1rem;
-  gap: 0.5rem;
-  justify-content: center;
-  align-items: center;
 }
 
 .search_field input {
   width: 80%;
+}
+
+.search-warning {
+  margin-top: 10px;
+  visibility: hidden;
+  color: red;
+  display: block;
 }
 
 img {
@@ -426,6 +437,15 @@ html::-webkit-scrollbar-thumb {
 }
 
 @media only all and (max-width: 900px) {
+  .navlist {
+    flex-direction: column;
+    position: absolute;
+    top: 6vh;
+    right: 0;
+    display: none;
+    gap: 1rem;
+    justify-content: space-evenly;
+  }
   .container {
     padding: 1rem;
     margin: 0 0.5rem;
